feat(attributes): group alphanumeric attributes by type
